hphp/test/zend/good/Zend/tests/lsb_007.php.expectf

Fatal error: A type specifier is expected here. in %s/lsb_007.php on line 3
